--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="images/logo.png" alt="Manus Webworks logo" class="logo" />
+        <img src="images/logo_small.png" alt="Manus Webworks logo" class="logo" />
         <span class="brand-name">Manus Webworks</span>
       </div>
     </div>
