--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
         <div class="project-grid">
 
-          <!-- Finance App -->
+          <!-- Wise Wallet -->
           <article class="project-card">
             <div class="project-header">
-              <img src="images/financeapplogo.jpg" alt="Finance App logo" class="project-logo" />
+              <img src="images/wisewalletlogo.png" alt="Wallet Wise logo" class="project-logo" />
               <h3>
                 <a href="https://app.thequantifier.com" target="_blank" rel="noopener">
-                  Finance App
+                  Wallet Wise App
                 </a>
               </h3>
             </div>
