minor update to photos and logos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <!-- Civic Helper -->
           <article class="project-card">
             <div class="project-header">
-              <img src="images/civicapplogo.png" alt="Civic Helper logo" class="project-logo" />
+              <img src="images/civichelperlogo.png" alt="Civic Helper logo" class="project-logo" />
               <h3><span aria-disabled="true">Civic Helper</span></h3>
             </div>
 
@@ -98,7 +98,7 @@
           <!-- Church Unity Aid -->
           <article class="project-card">
             <div class="project-header">
-              <img src="images/churchunityapplogo.png" alt="Church Unity Aid logo" class="project-logo" />
+              <img src="images/churchunitylogo.png" alt="Church Unity logo" class="project-logo" />
               <h3><span aria-disabled="true">Church Unity Aid</span></h3>
             </div>
 
@@ -134,7 +134,7 @@
     <section class="designer">
       <div class="container designer-inner">
         <img
-          src="images/john-hand.jpg"
+          src="images/john-hand.png"
           alt="John Hand portrait"
           class="designer-photo"
           loading="lazy"
