fixed links to logo

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="Manus Webworks is a small studio building structure-first software—practical tools, civic systems, and reliable digital infrastructure." />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/logo.png" />
+  <link rel="icon" type="image/png" href="images/logo-med.png" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Manus Webworks" />
   <meta property="og:description" content="Structure-first software. Built carefully, with clarity and long-term reliability at the core." />
-  <meta property="og:image" content="images/logo.png" />
+  <meta property="og:image" content="images/logo-med.png" />
   <meta property="og:type" content="website" />
 
   <!-- Styles -->
