fixed logo links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Manus Webworks is a small studio building structure-first software—practical tools, civic systems, and reliable digital infrastructure." />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/logo-med.png" />
+  <link rel="icon" type="image/png" href="images/logo-small.png" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Manus Webworks" />
