renamed small logo to favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Manus Webworks is a small studio building structure-first software—practical tools, civic systems, and reliable digital infrastructure." />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/logo_small.png" />
+  <link rel="icon" type="image/png" href="images/favicon.png" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Manus Webworks" />
@@ -29,7 +29,7 @@
     <div class="container header-inner">
       <div class="brand">
         <a href="/" aria-label="Manus Webworks home" style="display:flex;align-items:center;gap:0.85rem;text-decoration:none;">
-          <img src="images/logo_small.png" alt="Manus Webworks logo" class="logo" />
+          <img src="images/favicon.png" alt="Manus Webworks logo" class="logo" />
           <span class="brand-name">Manus Webworks</span>
         </a>
       </div>
