renamed WalletWise to WiseWallet

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
           <!-- Wise Wallet -->
           <article class="project-card">
             <div class="project-header">
-              <img src="images/wisewalletlogo.png" alt="Wallet Wise logo" class="project-logo" />
+              <img src="images/wisewalletlogo.png" alt="Wise Wallet logo" class="project-logo" />
               <h3>
                 <a href="https://app.thequantifier.com" target="_blank" rel="noopener">
-                  Wallet Wise App
+                  WiseWallet App
                 </a>
               </h3>
             </div>
